PDFDocBuilder/bin/Debug/Import/C/DebenuPDFLibraryDLL1114.h

__declspec(dllimport) double __stdcall DPLDrawTableRows(int instanceID, int TableID, double Left, double Top, double Height, int FirstRow, int LastRow);
__declspec(dllimport) int __stdcall DPLDrawText(int instanceID, double XPos, double YPos, wchar_t * Text);
__declspec(dllimport) int __stdcall DPLDrawTextA(int instanceID, double XPos, double YPos, char * Text);
__declspec(dllimport) int __stdcall DPLDrawTextArc(int instanceID, double XPos, double YPos, double Radius, double Angle, wchar_t * Text, int DrawOptions);
__declspec(dllimport) int __stdcall DPLDrawTextArcA(int instanceID, double XPos, double YPos, double Radius, double Angle, char * Text, int DrawOptions);
__declspec(dllimport) int __stdcall DPLDrawTextBox(int instanceID, double Left, double Top, double Width, double Height, wchar_t * Text, int Options);
__declspec(dllimport) int __stdcall DPLDrawTextBoxA(int instanceID, double Left, double Top, double Width, double Height, char * Text, int Options);
__declspec(dllimport) int __stdcall DPLDrawTextBoxMatrix(int instanceID, double Width, double Height, wchar_t * Text, int Options, double M11, double M12, double M21, double M22, double MDX, double MDY);
__declspec(dllimport) int __stdcall DPLDrawTextBoxMatrixA(int instanceID, double Width, double Height, char * Text, int Options, double M11, double M12, double M21, double M22, double MDX, double MDY);
__declspec(dllimport) int __stdcall DPLDrawWrappedText(int instanceID, double XPos, double YPos, double Width, wchar_t * Text);
__declspec(dllimport) int __stdcall DPLDrawWrappedTextA(int instanceID, double XPos, double YPos, double Width, char * Text);
__declspec(dllimport) int __stdcall DPLEditableContentStream(int instanceID);
__declspec(dllimport) int __stdcall DPLEmbedFile(int instanceID, wchar_t * Title, wchar_t * FileName, wchar_t * MIMEType);
__declspec(dllimport) int __stdcall DPLEmbedFileA(int instanceID, char * Title, char * FileName, char * MIMEType);
__declspec(dllimport) int __stdcall DPLEmbeddedFileCount(int instanceID);
__declspec(dllimport) int __stdcall DPLEncapsulateContentStream(int instanceID);
__declspec(dllimport) int __stdcall DPLEncodePermissions(int instanceID, int CanPrint, int CanCopy, int CanChange, int CanAddNotes, int CanFillFields, int CanCopyAccess, int CanAssemble, int CanPrintFull);
__declspec(dllimport) int __stdcall DPLEncrypt(int instanceID, wchar_t * Owner, wchar_t * User, int Strength, int Permissions);
__declspec(dllimport) int __stdcall DPLEncryptA(int instanceID, char * Owner, char * User, int Strength, int Permissions);
__declspec(dllimport) int __stdcall DPLEncryptFile(int instanceID, wchar_t * InputFileName, wchar_t * OutputFileName, wchar_t * Owner, wchar_t * User, int Strength, int Permissions);
__declspec(dllimport) int __stdcall DPLEncryptFileA(int instanceID, char * InputFileName, char * OutputFileName, char * Owner, char * User, int Strength, int Permissions);
__declspec(dllimport) int __stdcall DPLEncryptWithFingerprint(int instanceID, wchar_t * Fingerprint);
__declspec(dllimport) int __stdcall DPLEncryptWithFingerprintA(int instanceID, char * Fingerprint);
__declspec(dllimport) int __stdcall DPLEncryptionAlgorithm(int instanceID);
__declspec(dllimport) int __stdcall DPLEncryptionStatus(int instanceID);
__declspec(dllimport) int __stdcall DPLEncryptionStrength(int instanceID);
__declspec(dllimport) int __stdcall DPLEndPageUpdate(int instanceID);
__declspec(dllimport) int __stdcall DPLEndSignProcessToFile(int instanceID, int SignProcessID, wchar_t * OutputFile);
__declspec(dllimport) int __stdcall DPLEndSignProcessToFileA(int instanceID, int SignProcessID, char * OutputFile);
__declspec(dllimport) char* __stdcall DPLEndSignProcessToString(int instanceID, int SignProcessID);
__declspec(dllimport) char* __stdcall DPLExtractFilePageContentToString(int instanceID, wchar_t * InputFileName, wchar_t * Password, int Page);
__declspec(dllimport) char* __stdcall DPLExtractFilePageContentToStringA(int instanceID, char * InputFileName, char * Password, int Page);
__declspec(dllimport) wchar_t* __stdcall DPLExtractFilePageText(int instanceID, wchar_t * InputFileName, wchar_t * Password, int Page, int Options);
__declspec(dllimport) char* __stdcall DPLExtractFilePageTextA(int instanceID, char * InputFileName, char * Password, int Page, int Options);
__declspec(dllimport) int __stdcall DPLExtractFilePageTextBlocks(int instanceID, wchar_t * InputFileName, wchar_t * Password, int Page, int Options);
__declspec(dllimport) int __stdcall DPLExtractFilePageTextBlocksA(int instanceID, char * InputFileName, char * Password, int Page, int Options);
__declspec(dllimport) int __stdcall DPLExtractFilePages(int instanceID, wchar_t * InputFileName, wchar_t * Password, wchar_t * OutputFileName, wchar_t * RangeList);
__declspec(dllimport) int __stdcall DPLExtractFilePagesA(int instanceID, char * InputFileName, char * Password, char * OutputFileName, char * RangeList);
__declspec(dllimport) int __stdcall DPLExtractFilePagesEx(int instanceID, wchar_t * InputFileName, wchar_t * Password, wchar_t * OutputFileName, wchar_t * RangeList, int Options);
__declspec(dllimport) int __stdcall DPLExtractFilePagesExA(int instanceID, char * InputFileName, char * Password, char * OutputFileName, char * RangeList, int Options);
__declspec(dllimport) int __stdcall DPLExtractPageRanges(int instanceID, wchar_t * RangeList);
__declspec(dllimport) int __stdcall DPLExtractPageRangesA(int instanceID, char * RangeList);
__declspec(dllimport) int __stdcall DPLExtractPageTextBlocks(int instanceID, int ExtractOptions);
__declspec(dllimport) int __stdcall DPLExtractPages(int instanceID, int StartPage, int PageCount);
__declspec(dllimport) int __stdcall DPLFileListCount(int instanceID, wchar_t * ListName);
__declspec(dllimport) int __stdcall DPLFileListCountA(int instanceID, char * ListName);
__declspec(dllimport) wchar_t* __stdcall DPLFileListItem(int instanceID, wchar_t * ListName, int Index);
__declspec(dllimport) char* __stdcall DPLFileListItemA(int instanceID, char * ListName, int Index);
__declspec(dllimport) int __stdcall DPLFindFonts(int instanceID);
__declspec(dllimport) int __stdcall DPLFindFormFieldByTitle(int instanceID, wchar_t * Title);
__declspec(dllimport) int __stdcall DPLFindFormFieldByTitleA(int instanceID, char * Title);
__declspec(dllimport) int __stdcall DPLFindImages(int instanceID);
__declspec(dllimport) int __stdcall DPLFitImage(int instanceID, double Left, double Top, double Width, double Height, int HAlign, int VAlign, int Rotate);
__declspec(dllimport) int __stdcall DPLFitRotatedTextBox(int instanceID, double Left, double Top, double Width, double Height, double Angle, wchar_t * Text, int Options);
__declspec(dllimport) int __stdcall DPLFitRotatedTextBoxA(int instanceID, double Left, double Top, double Width, double Height, double Angle, char * Text, int Options);
__declspec(dllimport) int __stdcall DPLFitTextBox(int instanceID, double Left, double Top, double Width, double Height, wchar_t * Text, int Options);
__declspec(dllimport) int __stdcall DPLFitTextBoxA(int instanceID, double Left, double Top, double Width, double Height, char * Text, int Options);
__declspec(dllimport) int __stdcall DPLFlattenAnnot(int instanceID, int Index, int Options);
__declspec(dllimport) int __stdcall DPLFlattenFormField(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLFontCount(int instanceID);
__declspec(dllimport) wchar_t* __stdcall DPLFontFamily(int instanceID);
__declspec(dllimport) char* __stdcall DPLFontFamilyA(int instanceID);
__declspec(dllimport) int __stdcall DPLFontHasKerning(int instanceID);
__declspec(dllimport) wchar_t* __stdcall DPLFontName(int instanceID);
__declspec(dllimport) char* __stdcall DPLFontNameA(int instanceID);
__declspec(dllimport) wchar_t* __stdcall DPLFontReference(int instanceID);
__declspec(dllimport) char* __stdcall DPLFontReferenceA(int instanceID);
__declspec(dllimport) int __stdcall DPLFontSize(int instanceID);
__declspec(dllimport) int __stdcall DPLFontType(int instanceID);
__declspec(dllimport) int __stdcall DPLFormFieldCount(int instanceID);
__declspec(dllimport) int __stdcall DPLFormFieldHasParent(int instanceID, int Index);
__declspec(dllimport) int __stdcall DPLFormFieldJavaScriptAction(int instanceID, int Index, wchar_t * ActionType, wchar_t * JavaScript);
__declspec(dllimport) int __stdcall DPLFormFieldJavaScriptActionA(int instanceID, int Index, char * ActionType, char * JavaScript);
__declspec(dllimport) int __stdcall DPLFormFieldWebLinkAction(int instanceID, int Index, wchar_t * ActionType, wchar_t * Link);
__declspec(dllimport) int __stdcall DPLFormFieldWebLinkActionA(int instanceID, int Index, char * ActionType, char * Link);
__declspec(dllimport) int __stdcall DPLGetActionDest(int instanceID, int ActionID);
__declspec(dllimport) wchar_t* __stdcall DPLGetActionType(int instanceID, int ActionID);
__declspec(dllimport) char* __stdcall DPLGetActionTypeA(int instanceID, int ActionID);
__declspec(dllimport) wchar_t* __stdcall DPLGetActionURL(int instanceID, int ActionID);
__declspec(dllimport) char* __stdcall DPLGetActionURLA(int instanceID, int ActionID);
__declspec(dllimport) wchar_t* __stdcall DPLGetAnalysisInfo(int instanceID, int AnalysisID, int AnalysisItem);
__declspec(dllimport) char* __stdcall DPLGetAnalysisInfoA(int instanceID, int AnalysisID, int AnalysisItem);
__declspec(dllimport) int __stdcall DPLGetAnnotActionID(int instanceID, int Index);
__declspec(dllimport) double __stdcall DPLGetAnnotDblProperty(int instanceID, int Index, int Tag);
__declspec(dllimport) int __stdcall DPLGetAnnotDest(int instanceID, int Index);
__declspec(dllimport) wchar_t* __stdcall DPLGetAnnotEmbeddedFileName(int instanceID, int Index, int Options);
__declspec(dllimport) char* __stdcall DPLGetAnnotEmbeddedFileNameA(int instanceID, int Index, int Options);
__declspec(dllimport) int __stdcall DPLGetAnnotEmbeddedFileToFile(int instanceID, int Index, int Options, wchar_t * FileName);
__declspec(dllimport) int __stdcall DPLGetAnnotEmbeddedFileToFileA(int instanceID, int Index, int Options, char * FileName);