PDFDocBuilder/bin/Debug/Import/VB6/DebenuPDFLibraryDLL1114.bas

Public Declare Function DPLDrawTableRows LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawTableRows" ( _
  ByVal iInstanceID As Long, ByVal iTableID As Long, ByVal dLeft As Double, _
  ByVal dTop As Double, ByVal dHeight As Double, ByVal iFirstRow As Long, _
  ByVal iLastRow As Long) As Double
Public Declare Function DPLDrawText LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawTextA" ( _
  ByVal iInstanceID As Long, ByVal dXPos As Double, ByVal dYPos As Double, _
  ByVal sText As String) As Long
Public Declare Function DPLDrawTextArc LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawTextArcA" ( _
  ByVal iInstanceID As Long, ByVal dXPos As Double, ByVal dYPos As Double, _
  ByVal dRadius As Double, ByVal dAngle As Double, ByVal sText As String, _
  ByVal iDrawOptions As Long) As Long
Public Declare Function DPLDrawTextBox LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawTextBoxA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sText As String, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLDrawTextBoxMatrix LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawTextBoxMatrixA" ( _
  ByVal iInstanceID As Long, ByVal dWidth As Double, ByVal dHeight As Double, _
  ByVal sText As String, ByVal iOptions As Long, ByVal dM11 As Double, _
  ByVal dM12 As Double, ByVal dM21 As Double, ByVal dM22 As Double, _
  ByVal dMDX As Double, ByVal dMDY As Double) As Long
Public Declare Function DPLDrawWrappedText LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLDrawWrappedTextA" ( _
  ByVal iInstanceID As Long, ByVal dXPos As Double, ByVal dYPos As Double, _
  ByVal dWidth As Double, ByVal sText As String) As Long
Public Declare Function DPLEditableContentStream LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLEditableContentStream" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLEmbedFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLEmbedFileA" ( _
  ByVal iInstanceID As Long, ByVal sTitle As String, ByVal sFileName As String, _
  ByVal sMIMEType As String) As Long
Public Declare Function DPLEmbeddedFileCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLEmbeddedFileCount" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLEncapsulateContentStream LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLEncapsulateContentStream" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLEncodePermissions LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLEncodePermissions" ( _
  ByVal iInstanceID As Long, ByVal iCanPrint As Long, ByVal iCanCopy As Long, _
  ByVal iCanChange As Long, ByVal iCanAddNotes As Long, _
  ByVal iCanFillFields As Long, ByVal iCanCopyAccess As Long, _
  ByVal iCanAssemble As Long, ByVal iCanPrintFull As Long) As Long
Public Declare Function DPLEncrypt LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLEncryptA" ( _
  ByVal iInstanceID As Long, ByVal sOwner As String, ByVal sUser As String, _
  ByVal iStrength As Long, ByVal iPermissions As Long) As Long
Public Declare Function DPLEncryptFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLEncryptFileA" ( _
  ByVal iInstanceID As Long, ByVal sInputFileName As String, _
  ByVal sOutputFileName As String, ByVal sOwner As String, _
  ByVal sUser As String, ByVal iStrength As Long, _
  ByVal iPermissions As Long) As Long
Public Declare Function DPLEncryptWithFingerprint LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLEncryptWithFingerprintA" ( _
  ByVal iInstanceID As Long, ByVal sFingerprint As String) As Long
Public Declare Function DPLEncryptionAlgorithm LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLEncryptionAlgorithm" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLEncryptionStatus LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLEncryptionStatus" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLEncryptionStrength LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLEncryptionStrength" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLEndPageUpdate LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLEndPageUpdate" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLEndSignProcessToFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLEndSignProcessToFileA" ( _
  ByVal iInstanceID As Long, ByVal iSignProcessID As Long, _
  ByVal sOutputFile As String) As Long
Public Declare Function DPLEndSignProcessToString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLEndSignProcessToString" ( _
  ByVal iInstanceID As Long, ByVal iSignProcessID As Long) As String
Public Declare Function DPLExtractFilePageContentToString LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLExtractFilePageContentToStringA" ( _
  ByVal iInstanceID As Long, ByVal sInputFileName As String, _
  ByVal sPassword As String, ByVal iPage As Long) As String
Public Declare Function DPLExtractFilePageText LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLExtractFilePageTextA" ( _
  ByVal iInstanceID As Long, ByVal sInputFileName As String, _
  ByVal sPassword As String, ByVal iPage As Long, _
  ByVal iOptions As Long) As String
Public Declare Function DPLExtractFilePageTextBlocks LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLExtractFilePageTextBlocksA" ( _
  ByVal iInstanceID As Long, ByVal sInputFileName As String, _
  ByVal sPassword As String, ByVal iPage As Long, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLExtractFilePages LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLExtractFilePagesA" ( _
  ByVal iInstanceID As Long, ByVal sInputFileName As String, _
  ByVal sPassword As String, ByVal sOutputFileName As String, _
  ByVal sRangeList As String) As Long
Public Declare Function DPLExtractFilePagesEx LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLExtractFilePagesExA" ( _
  ByVal iInstanceID As Long, ByVal sInputFileName As String, _
  ByVal sPassword As String, ByVal sOutputFileName As String, _
  ByVal sRangeList As String, ByVal iOptions As Long) As Long
Public Declare Function DPLExtractPageRanges LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLExtractPageRangesA" ( _
  ByVal iInstanceID As Long, ByVal sRangeList As String) As Long
Public Declare Function DPLExtractPageTextBlocks LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLExtractPageTextBlocks" ( _
  ByVal iInstanceID As Long, ByVal iExtractOptions As Long) As Long
Public Declare Function DPLExtractPages LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLExtractPages" ( _
  ByVal iInstanceID As Long, ByVal iStartPage As Long, _
  ByVal iPageCount As Long) As Long
Public Declare Function DPLFileListCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFileListCountA" ( _
  ByVal iInstanceID As Long, ByVal sListName As String) As Long
Public Declare Function DPLFileListItem LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFileListItemA" ( _
  ByVal iInstanceID As Long, ByVal sListName As String, _
  ByVal iIndex As Long) As String
Public Declare Function DPLFindFonts LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFindFonts" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLFindFormFieldByTitle LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFindFormFieldByTitleA" ( _
  ByVal iInstanceID As Long, ByVal sTitle As String) As Long
Public Declare Function DPLFindImages LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFindImages" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLFitImage LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFitImage" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal iHAlign As Long, _
  ByVal iVAlign As Long, ByVal iRotate As Long) As Long
Public Declare Function DPLFitRotatedTextBox LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFitRotatedTextBoxA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal dAngle As Double, _
  ByVal sText As String, ByVal iOptions As Long) As Long
Public Declare Function DPLFitTextBox LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFitTextBoxA" ( _
  ByVal iInstanceID As Long, ByVal dLeft As Double, ByVal dTop As Double, _
  ByVal dWidth As Double, ByVal dHeight As Double, ByVal sText As String, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLFlattenAnnot LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFlattenAnnot" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal iOptions As Long) As Long
Public Declare Function DPLFlattenFormField LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFlattenFormField" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLFontCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFontCount" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLFontFamily LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFontFamilyA" (ByVal iInstanceID As Long) As String
Public Declare Function DPLFontHasKerning LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFontHasKerning" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLFontName LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFontNameA" (ByVal iInstanceID As Long) As String
Public Declare Function DPLFontReference LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFontReferenceA" (ByVal iInstanceID As Long) As String
Public Declare Function DPLFontSize LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFontSize" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLFontType LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFontType" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLFormFieldCount LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFormFieldCount" (ByVal iInstanceID As Long) As Long
Public Declare Function DPLFormFieldHasParent LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFormFieldHasParent" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLFormFieldJavaScriptAction LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFormFieldJavaScriptActionA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, ByVal sActionType As String, _
  ByVal sJavaScript As String) As Long
Public Declare Function DPLFormFieldWebLinkAction LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLFormFieldWebLinkActionA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, ByVal sActionType As String, _
  ByVal sLink As String) As Long
Public Declare Function DPLGetActionDest LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetActionDest" ( _
  ByVal iInstanceID As Long, ByVal iActionID As Long) As Long
Public Declare Function DPLGetActionType LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetActionTypeA" ( _
  ByVal iInstanceID As Long, ByVal iActionID As Long) As String
Public Declare Function DPLGetActionURL LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetActionURLA" ( _
  ByVal iInstanceID As Long, ByVal iActionID As Long) As String
Public Declare Function DPLGetAnalysisInfo LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetAnalysisInfoA" ( _
  ByVal iInstanceID As Long, ByVal iAnalysisID As Long, _
  ByVal iAnalysisItem As Long) As String
Public Declare Function DPLGetAnnotActionID LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetAnnotActionID" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetAnnotDblProperty LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetAnnotDblProperty" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, ByVal iTag As Long) As Double
Public Declare Function DPLGetAnnotDest LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetAnnotDest" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long) As Long
Public Declare Function DPLGetAnnotEmbeddedFileName LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetAnnotEmbeddedFileNameA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, _
  ByVal iOptions As Long) As String
Public Declare Function DPLGetAnnotEmbeddedFileToFile LIB "DebenuPDFLibraryDLL1114.dll" Alias "DPLGetAnnotEmbeddedFileToFileA" ( _
  ByVal iInstanceID As Long, ByVal iIndex As Long, ByVal iOptions As Long, _
  ByVal sFileName As String) As Long
